objects/ssot__EmailTemplate__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__APIVersionName__c</fullName>
        <label>API Version</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>API Version</masterLabel>
            <refAttrDeveloperName>APIVersionName</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BodyTxt__c</fullName>
        <label>Body</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Body</masterLabel>
            <refAttrDeveloperName>BodyTxt</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Created Date</masterLabel>
            <refAttrDeveloperName>CreatedDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source</masterLabel>
            <refAttrDeveloperName>DataSourceId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source Object</masterLabel>
            <refAttrDeveloperName>DataSourceObjectId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeliveryPct__c</fullName>
        <label>Delivery Percent</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Delivery Percent</masterLabel>
            <refAttrDeveloperName>DeliveryPct</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EmailTemplateBodyTxt__c</fullName>
        <label>Email Template Body Text</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Email Template Body Text</masterLabel>
            <refAttrDeveloperName>EmailTemplateBodyTxt</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailTemplateStyleId__c</fullName>
        <label>Email Template Style</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Email Template Style</masterLabel>
            <refAttrDeveloperName>EmailTemplateStyleId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailTemplateTypeId__c</fullName>
        <label>Email Template Type</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Email Template Type</masterLabel>
            <refAttrDeveloperName>EmailTemplateTypeId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAssetNbr__c</fullName>
        <label>Engagement Asset Number</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Engagement Asset Number</masterLabel>
            <refAttrDeveloperName>EngagementAssetNbr</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAssetTypeId__c</fullName>
        <label>Engagement Asset Type</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Engagement Asset Type</masterLabel>
            <refAttrDeveloperName>EngagementAssetTypeId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementMessageTypeId__c</fullName>
        <label>Engagement Message Type</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Engagement Message Type</masterLabel>
            <refAttrDeveloperName>EngagementMessageTypeId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>External Record Id</masterLabel>
            <refAttrDeveloperName>ExternalRecordId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>External Source Id</masterLabel>
            <refAttrDeveloperName>ExternalSourceId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Email Template Id</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Email Template Id</masterLabel>
            <primaryIndexOrder>1</primaryIndexOrder>
            <refAttrDeveloperName>Id</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Internal Organization</masterLabel>
            <refAttrDeveloperName>InternalOrganizationId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Last Modified Date</masterLabel>
            <refAttrDeveloperName>LastModifiedDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MessageFormatTypeId__c</fullName>
        <label>Message Format Type</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Message Format Type</masterLabel>
            <refAttrDeveloperName>MessageFormatTypeId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Name</masterLabel>
            <refAttrDeveloperName>Name</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NamespacePrefixTxt__c</fullName>
        <label>Namespace Prefix Text</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Namespace Prefix Text</masterLabel>
            <refAttrDeveloperName>NamespacePrefixTxt</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentEngagementAssetId__c</fullName>
        <label>Parent Engagement Asset</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Parent Engagement Asset</masterLabel>
            <refAttrDeveloperName>ParentEngagementAssetId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SendClassificationId__c</fullName>
        <label>Send Classification</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Send Classification</masterLabel>
            <refAttrDeveloperName>SendClassificationId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectTxt__c</fullName>
        <label>Subject</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Subject</masterLabel>
            <refAttrDeveloperName>SubjectTxt</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TimesUsedQty__c</fullName>
        <label>Times Used Quantity</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Times Used Quantity</masterLabel>
            <refAttrDeveloperName>TimesUsedQty</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveredQty__c</fullName>
        <label>Total Delivered Quantity</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Delivered Quantity</masterLabel>
            <refAttrDeveloperName>TotalDeliveredQty</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalHardBouncedQty__c</fullName>
        <label>Total Hard Bounced Quantity</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Hard Bounced Quantity</masterLabel>
            <refAttrDeveloperName>TotalHardBouncedQty</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalOpensQty__c</fullName>
        <label>Total Opens Quantity</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Opens Quantity</masterLabel>
            <refAttrDeveloperName>TotalOpensQty</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalSentQty__c</fullName>
        <label>Total Sent Quantity</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Sent Quantity</masterLabel>
            <refAttrDeveloperName>TotalSentQty</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalSoftBouncedQty__c</fullName>
        <label>Total Sof tBounced Quantity</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Sof tBounced Quantity</masterLabel>
            <refAttrDeveloperName>TotalSoftBouncedQty</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UITypeTxt__c</fullName>
        <label>User Interface Type</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>User Interface Type</masterLabel>
            <refAttrDeveloperName>UITypeTxt</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761167763_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DeviceApplicationTemplate_Id_map_Ema_rel</label>
        <referenceTo>ssot__DeviceApplicationTemplate__dlm</referenceTo>
        <relationshipLabel>DeviceApplicationTemplate_Id_map_Ema_rel</relationshipLabel>
        <relationshipName>rel_1697761167763_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761171723_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailTemplate_Id_map_EmailTemplate_P_rel</label>
        <referenceTo>ssot__EmailTemplate__dlm</referenceTo>
        <relationshipLabel>EmailTemplate_Id_map_EmailTemplate_P_rel</relationshipLabel>
        <relationshipName>rel_1697761171723_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761172405_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailTemplate_ParentEngagementAssetI_rel</label>
        <referenceTo>ssot__DeviceApplicationTemplate__dlm</referenceTo>
        <relationshipLabel>EmailTemplate_ParentEngagementAssetI_rel</relationshipLabel>
        <relationshipName>rel_1697761172405_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>The standard form of an email message that can be personalized and customized with data specific to an individual recipient, market segment or other customization factor.</description>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Email Template</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Engagement</referenceEntityGroup>
        <referenceEntityName>EmailTemplate</referenceEntityName>
        <referenceEntitySubjectArea>Engagement</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>